--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <button
                 class="bg-gray-900 hover:bg-opacity-90 text-white w-full h-12 rounded-lg"
               >
-                <a href="/singleProduct.html">Veiw Product</a>
+                <a href="singleProduct.html">Veiw Product</a>
               </button>
             </div>
           </div>
@@ -146,7 +146,7 @@
               <button
                 class="bg-gray-900 hover:bg-opacity-90 text-white w-full h-12 rounded-lg"
               >
-                <a href="#">Veiw Product</a>
+                <a href="singleProduct.html" href="#">Veiw Product</a>
               </button>
             </div>
           </div>
@@ -164,7 +164,7 @@
               <button
                 class="bg-gray-900 hover:bg-opacity-90 text-white w-full h-12 rounded-lg"
               >
-                <a href="#">Veiw Product</a>
+                <a href="singleProduct.html" href="#">Veiw Product</a>
               </button>
             </div>
           </div>
@@ -182,7 +182,7 @@
               <button
                 class="bg-gray-900 hover:bg-opacity-90 text-white w-full h-12 rounded-lg"
               >
-                <a href="#">Veiw Product</a>
+                <a href="singleProduct.html" href="#">Veiw Product</a>
               </button>
             </div>
           </div>
